# Langchain

./: pyproject.toml  requirements.txt
langchain-update/: llm_call.ipynb
