[project]
name = "langchain-yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "notebook>=7.5.7",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
